node/plain/container/Application/manifests/deployment (2).yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: ajakscluster4
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: ajakscluster4
    spec:
      containers:
        - name: ajakscluster4
          image: bishalcontainer1acr.azurecr.io/ajakscluster4
          ports:
          - containerPort: 80
