node/plain/container/Application/manifests/service (2).yml
apiVersion: v1
kind: Service
metadata:
    name: vscodebugbash2
    labels:
        app: vscodebugbash2
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: vscodebugbash2
