node/plain/container/Application/manifests/service (4).yml
apiVersion: v1
kind: Service
metadata:
    name: ajakscluster4
    labels:
        app: ajakscluster4
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: ajakscluster4
