node/plain/container/Application/manifests/ingress (1).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: kp
    labels:
        app: kp
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: kp843d-kp.b4edb046fd7146538faf.southcentralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: kp
                servicePort: 8080
